# VirtuV

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  output.txt  setup.env
.github/workflows/: compile-check.yaml
docs/: architecture_overview.md  contributing_guide.md  getting_started.md
scripts/: clean.sh  copy_code.sh
src/: main.cpp
src/bindings/: virtuv_bindings.cpp
src/core/: CMakeLists.txt
src/core/cpu/: CPU.cpp  CPU.hpp  cpu.cpp  cpu.hpp
src/core/cpu/isa/: Instruction.hpp
src/core/cpu/pipeline/: Pipeline.cpp  Pipeline.hpp  PipelineStage.hpp
src/core/cpu/pipeline/decode/: DecodeStage.cpp  DecodeStage.hpp
src/core/cpu/pipeline/execute/: ExecuteStage.cpp  ExecuteStage.hpp  ExecutionStage.cpp  ExecutionStage.hpp
src/core/cpu/pipeline/fetch/: FetchStage.cpp  FetchStage.hpp
src/core/cpu/pipeline/memory_access/: MemoryAccessStage.cpp  MemoryAccessStage.hpp
src/core/cpu/pipeline/write_back/: WriteBackStage.cpp  WriteBackStage.hpp
src/core/cpu/register_bank/: RegisterBank.cpp  RegisterBank.hpp
src/core/cpu/state/: PrivilegeMode.hpp
src/core/memory/: MMU.cpp  MMU.hpp  Memory.hpp  PageTable.cpp  PageTable.hpp  PageTableEntry.cpp  PageTableEntry.hpp  PhysicalMemory.cpp  PhysicalMemory.hpp
src/utils/: bitutils.hpp  plt.hpp
tests/: CMakeLists.txt  test_mmu.py
tests/basic_directed/: test_cpu.py  test_mmu.py  test_pipeline_stages.py
